[package]
name = "fuwane-foundation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["sync"] }
once_cell = "1.17.1"
serde-big-array = "0.5.1"
serde = "1.0.160"

[target.'cfg(not(target_arch="wasm32"))'.dependencies.songbird]
version = "0.3.1"
features = ["driver"]